[package]
name = "nonamedocs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", features = ["persistence"] }
egui = "0.34.1"
log = "0.4.29"
pulldown-cmark = { version = "0.13.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3"
web-sys = { version = "0.3.70", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
dotenvy_macro = "0.15.7"
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
] }
web-time = "1.1.0"
