[package]
name = "kwocs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "persistence",
    # Binary size
    "glow",
] }
egui = { version = "0.34.1", default-features = false } # disable built-in fonts
log = "0.4.29"
pulldown-cmark = { version = "0.13.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3"
web-sys = { version = "0.3.70", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
dotenvy_macro = "0.15.7"
syntect = { version = "5.3.0", default-features = false, features = [
    "default-syntaxes",
    "plist-load",
    "regex-fancy",
] }
web-time = "1.1.0"

syntastica = { version = "0.6.1", default-features = false, features = [
    "runtime-c2rust",
] }
syntastica-parsers-git = { version = "0.6.1", default-features = false, features = [
    "runtime-c2rust",
    "some",
] }
syntastica-themes = { version = "0.6.1", default-features = false, features = [
    "runtime-c2rust",
] }
syntastica-highlight = { version = "0.6.1", default-features = false, features = [
    "runtime-c2rust",
] }

# Always optimize dependencies.
[profile.dev.package."*"]
opt-level = 3
